k8s/init-kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose-windows-amd64.exe convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: init-kafka
  name: init-kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: init-kafka
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose-windows-amd64.exe convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: init-kafka
    spec:
      containers:
        - args:
            - "\n# blocks until kafka is reachable\nkafka-topics --bootstrap-server kafka:29092 --list\n\necho -e 'Creating kafka topics'\n      kafka-topics --create --if-not-exists --zookeeper zookeeper:2181 --partitions 1 --replication-factor 1 --topic Vacinacao.Agendada && \n      kafka-topics --create --if-not-exists --zookeeper zookeeper:2181 --partitions 1 --replication-factor 1 --topic Vacinacao.Agendar && \n      kafka-topics --create --if-not-exists --zookeeper zookeeper:2181 --partiti [...]
          command:
            - /bin/sh
            - -c
          image: confluentinc/cp-kafka:6.1.1
          name: init-kafka
          resources: {}
      restartPolicy: Always
status: {}
