k8s/aplicar.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aplicar
  labels:
    app: aplicacao
    name: aplicar

spec:
  replicas: 1
  selector:
    matchLabels:
      app: aplicacao
      task: aplicar
  template:
    metadata:
      labels:
        app: aplicacao
        task: aplicar
    spec:
      containers:
        - name: aplicar
          image: ghcr.io/guigoetten/jenner/jenneraplicacao:master
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /ready # endpoint for readiness check; must return a 200 while pod is ready
              port: 80
              scheme: HTTP
            initialDelaySeconds: 2 # number of seconds to wait after the pod comes up before it starts testing
            periodSeconds: 10 # interval in seconds between tests
            timeoutSeconds: 2 # number of seconds before a test will implicitly fail, if no success was returned in that time
            successThreshold: 1 # has to pass a test this number of times contiguously before it can transition to a success
            failureThreshold: 3 # has to fail a test this number of times contiguously before it can transition to a failure
          livenessProbe:
            httpGet:
              path: /healthz # endpoint for liveness check; must return a 200 while pod is live
              port: 80
              scheme: HTTP
            initialDelaySeconds: 2 # number of seconds to wait after the pod comes up before it starts testing
            periodSeconds: 10 # interval in seconds between tests
            timeoutSeconds: 2 # number of seconds before a test will implicitly fail, if no success was returned in that time
            successThreshold: 1 # has to pass a test this number of times contiguously before it can transition to a success
            failureThreshold: 6 # has to fail a test this number of times contiguously before it can transition to a failure

---

apiVersion: v1
kind: Service
metadata:
  name: aplicar

spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: aplicacao
    task: aplicar
