k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  rules:
    - host: apps.minikube
      http:
        paths:
          - path: /bar
            pathType: Exact
            backend:
              service:
                name:  whoami
                port:
                  number: 80
          - path: /foo
            pathType: Exact
            backend:
              service:
                name:  whoami
                port:
                  number: 80
    - host: apps.minikube.vacinacao.aplicar
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aplicar
                port:
                  number: 80
    - host: apps.minikube.vacinacao.agendar
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-agendar-service
                port:
                  number: 80
    - host: apps.minikube.vacinacao.carteira
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-consultar-service
                port:
                  number: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  labels:
    app: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v2.6
          args:
            - --entrypoints.web.address=:80
            - --providers.kubernetesingress
            - --api.dashboard=true
            - --api.insecure=true
            - --accesslog=true
          ports:
            - name: web
              containerPort: 80
            - name: dashboard
              containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
    - protocol: TCP
      port: 80
      name: web
      targetPort: 80
    - protocol: TCP
      port: 8080
      name: dashboard
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  labels:
    app: traefiklabs
    name: whoami

spec:
  replicas: 2
  selector:
    matchLabels:
      app: traefiklabs
      task: whoami
  template:
    metadata:
      labels:
        app: traefiklabs
        task: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: whoami

spec:
  ports:
    - name: http
      port: 80
  selector:
    app: traefiklabs
    task: whoami
